# beacon_ble

./: CMakeLists.txt
components/nanopb/: CMakeLists.txt
docs/: version_infos.txt
main/: CMakeLists.txt  ble.c  ble.h  ble_gatt.c  ble_gatt.h  ble_live.c  ble_live.h  ble_log.c  ble_log.h  build_time.h  gen_build_time.py  log_ble.c  log_ble.h  main.c  nvs_controller.c  nvs_controller.h  sensor.pb.c  sensor.pb.h  serial.c  serial.h  sth31d.c  sth31d.h  temp_hum.c  temp_hum.h
